--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,24 @@
-html, body{
-  width: 100%;
-  
+body, html{
+  height: 100%;
+  margin: 0;
+  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.8em;
+  color: #666;
+}
+
+.pimg1{
+  background-image: url(../img/background1.jpg);
+  min-height: 100%;
+}
+
+.pimg2{
+  background-image: url(../img/background2.jpg);
+  min-height: 400px;
+}
+
+.pimg3{
+  background-image: url(../img/background3.jpg);
+  min-height: 400px;
 }
