--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* General Style*/
+
 body, html{
   height: 100%;
   margin: 0;
@@ -8,17 +10,88 @@ body, html{
   color: #666;
 }
 
+/* Image Style */
+.pimg1, .pimg2, .pimg3{
+  position: relative;
+  background-position: center;
+  background-size: cover;
+  opacity: 0.7;
+  background-attachment: fixed;
+}
+
 .pimg1{
-  background-image: url(../img/background1.jpg);
-  min-height: 100%;
+  background-image: url('../img/background1.jpg');
+  min-height:100%;
 }
 
 .pimg2{
-  background-image: url(../img/background2.jpg);
-  min-height: 400px;
+  background-image: url('../img/background2.jpg');
+  min-height: 300px;
 }
 
 .pimg3{
-  background-image: url(../img/background3.jpg);
-  min-height: 400px;
+  background-image: url('../img/background3.jpg');
+  min-height: 300px;
+}
+
+/* Section Style */
+.section {
+  text-align: center;
+  padding: 50px 80px;
+}
+
+.section-light{
+  background-color: #f4f4f4;
+  color: #666;
+}
+
+.section-dark{
+  background-color: #282e34;
+  color: #ddd;
+}
+
+.pborder{
+  text-align: center;
+
+}
+
+.ptext{
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  color: black;
+  font-size: 22px;
+  letter-spacing: 8px;
+  text-transform: uppercase;
+}
+
+.ptext1{
+  position: absolute;
+  top: 40%;
+  width: 100%;
+  text-align: center;
+  color: black;
+  font-size: 30px;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
+
+.ptext .pborder{
+  background-color: #111;
+  color: #fff;
+  padding: 20px;
+}
+
+.ptext .pborder.trans{
+  background-color: transparent;
+}
+
+
+
+/* Mobile View */
+@media(max-width: 568px){
+  .pimg1, .pimg2, .pimg3 {
+    background-attachment: scroll;
+  }
 }
